resources/css/custom-stylesheet.css
/* ... */
#lyricer ul li .lyrics-translation {
    font-size: 1.3rem;
    font-weight: 300;
}

.lyricWaiting {
    margin-top: 8px;
    display: none;
}

.lyricer-current-line .lyricWaiting {
    display: inline-flex;
    animation: lyricWaitingLine 6s cubic-bezier(0.42, 0, 0.58, 1) infinite;
}


.lyricWaiting > div {
    width: 10px;
    height: 10px;
    background: var(--systemPrimary);
    border-radius: 50%;
    margin: 3px;
}

@keyframes lyricWaitingLine {
    0% {
        opacity: 0;
        transform: scale(0.85);
    }
    50% {
        opacity: 1;
        transform: scale(1);
    }
    100% {
        opacity: 0;
        transform: scale(0.85);
    }
}

#unsynced {
    font-weight: 600;
    padding: 8px;
}

#unsynced > div > p {
    margin-top: 10px;
}

#MVLyricsBox {
    display: none;
    font-size: 1rem;
    position: absolute;
    top: 80%;
    text-align: center;
    width: auto;
    align-self: center;
    left: 50%;
    transform: translate(-50%, -50%);
}

.ameModal-Backdrop {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 9999;
    background: rgba(0, 0, 0, 0.45);
    display: flex;
    justify-content: center;
    align-items: center;
    transition: all .25s;
}

.ameModal {
    width: 80%;
    height: 80%;
    padding: 16px;
    border-radius: 10px;
    background: var(--modalBGColor);
    overflow: overlay;
    position: relative;
    animation: ameModalIn 0.10s var(--appleEase);
    will-change: opacity, transform;
    box-shadow: 0 8px 40px var(--dialogShadowColor);
}

/*.ameModal::after {*/
/*    content: '';*/
/*    width:100%;*/
/*    height:100%;*/
/*    box-shadow: inset 0 0.35px 0 1px rgba(255,255,255,0.1);*/
/*    overflow: hidden;*/
/*    position: absolute;*/
/*    top:0px;*/
/*    left:0px;*/
/*    border-radius: inherit;*/
/*    z-index:1;*/
/*    pointer-events: none;*/
/*}*/

.ameModal-closing {
    animation: ameModalOut 0.10s var(--appleEase) forwards;
}


/* @media (prefers-color-scheme: light) {
    .ameModal {
        background: rgb(255 255 255 / 92%);
    }
}

@media (prefers-color-scheme: dark) {
    .ameModal {
        background: rgb(31 31 31 / 85%);
    }
} */

.ameUserMenu {
    border-radius: 6px;
    border: .5px solid rgba(0, 0, 0, .2);
    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .2), 0 8px 40px var(--dialogShadowColor);
    animation: unset;
    background-color: var(--systemStandardThickMaterialSover);
    -webkit-backdrop-filter: blur(60px) saturate(210%);
    backdrop-filter: blur(60px) saturate(210%);
    font-size: 1.0em;
    padding: 0px;
    overflow: hidden;
}

@keyframes ameEQIn {
    0% {
        top: 46px;
        right: 142px;
        width: 178px;
        opacity: 0;
    }
    100% {
        top: 46px;
        right: 42px;
        width: 306px;
        opacity: 1;
    }
}

@keyframes ameModalIn {
    0% {
        transform: scale(0.85);
        opacity: 0;
    }
    100% {
        transform: scale(1.0);
        opacity: 1;
    }
}

@keyframes ameModalOut {
    0% {
        transform: scale(1.0);
        opacity: 1;
    }
    100% {
        transform: scale(0.85);
        opacity: 0;
    }
}

.ameModal-Close {
    position: absolute;
    top: 24px;
    left: 24px;
    z-index: 2;
    -webkit-mask-image: url("ameres://icons/webui/close.svg");
    -webkit-mask-repeat: no-repeat;
    -webkit-mask-position: center;
    background-color: white;
    opacity: 0.75;
    -webkit-mask-size: contain;
    height: 18px;
    width: 18px;
}

.micaBackground {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    pointer-events: none;
    z-index: -1;
    background: var(--user-wallpaper);
    background-repeat: cover;
    /*background-repeat: repeat;*/
    filter: blur(180px) saturate(180%) brightness(0.25);
}

#lyrics_none {
    height: 100%;
    width: 100%;
    text-align: center;
    vertical-align: middle;
    line-height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 500;
    font-size: 14px;
}

#lyrics_none.lyrics_none_hidden {
    display: none;
    height: 0;
}

/* Switch Checkbox */
input[type=checkbox][switch] {
    width: 38px;
    appearance: none;
    border-radius: 32px;
    height: 24px;
    zoom: 1;
    top: 0;
    cursor: pointer;
    left: 0;
    position: relative;
    transform: scale(1);
    background: var(--systemGray);
    mix-blend-mode: screen;
    padding: 0;
    margin: 0;
}

input[type=checkbox][switch]:focus,
input[type=checkbox][switch]:active {
    outline: none;
}

input[type=checkbox][switch]:checked {
    background: var(--keyColor);
    border: 0 solid var(--keyColor);
    mix-blend-mode: unset;
}

input[type=checkbox][switch]::before {
    background: white;
    width: 26px;
    height: 26px;
    top: -1px;
    left: -1px;
    position: absolute;
    content: ' ';
    border-radius: 32px;
    transition: .10s left var(--appleEase);
    transform: scale(.75);
}


input[type=checkbox][switch]:checked::before {
    background: white;
    top: -1px;
    left: 13px;
    transition: .10s left var(--appleEase);
    transform: scale(.75);
}

input[type=checkbox][switch]:disabled::before {
    opacity: .5;
}

input[type=checkbox][switch]:active::before {
    left: 13px;
}

input[type=checkbox][switch]:checked:active::before {
    left: -1px;
}

/* End Switch Checkbox */

